# futa

./: LICENSE  README.md  install.sh  pyproject.toml  setup.py
src/futa/: ai_runner.py  cli.py  denials.txt
